engine-net-2/examples/Errors/SubgraphTypeErrorCompiled.grs
new graph "SubgraphTypeErrorCompiled.grg"

quit
